# RestaurantBOTDN

./: .pre-commit-config.yaml  bot.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: actions.yml
app/: handlers.py
src/: bot.py  main.py  settings.py
src/app/: handlers.py
src/database/: models.py  request.py
src/handlers/: __init__.py  default.py  dish.py
src/schemas/: ingredients.py
