[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ackel-den",email = "gamedenis0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "ruff (>=0.12.4,<0.13.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
